[package]
name = "bf"
version = "0.1.0"
authors = ["Nick Samson <me@nicksamson.com>"]
edition = "2018"

[lib]
name = "bf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
thiserror = "1.0.19"
nom = "6.0.0-alpha1"
once_cell = "1.4.0"
anyhow = "1.0.31"
stopwatch = "0.0.7"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }
num-traits = "0.2.12"
better-panic = "0.2.0"
bfrt = { path = "../bfrt" }